--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-Router Stuff
+<h1>Hello!  {{name}}</h1>
 <nav>
-    <a routerLink="/add" RouterLinkActive="active">Add</a>
-    <a routerLink="/list" RouterLinkActive="active">List </a>
+    <a routerLink="/add"  routerLinkActive="active">Add</a>
+    <a routerLink="/list" routerLinkActive="active">List </a>
+    <a routerLink="/search" routerLinkActive="active">Search </a>
 </nav>
-<router-outlet></router-outlet>
-<h1>Hello {{name}}</h1>
+    <router-outlet></router-outlet>
