--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
     <a routerLink="/add"  routerLinkActive="active">Add</a>
     <a routerLink="/list" routerLinkActive="active">List </a>
     <a routerLink="/search" routerLinkActive="active">Search </a>
+    <my-spinner></my-spinner>
 </nav>
     <router-outlet></router-outlet>
