--- a/src/app/spinnerComponent/spinnerComponent.html
+++ b/src/app/spinnerComponent/spinnerComponent.html
@@ -1,4 +1,4 @@
-<div ngIf="isLoading">
+<div *ngIf="isLoading">
  <div class="sk-fading-circle">
     <div class="sk-circle1 sk-circle"></div>
     <div class="sk-circle2 sk-circle"></div>
