--- a/src/app/searchComponent/searchComponent.html
+++ b/src/app/searchComponent/searchComponent.html
@@ -1,5 +1,6 @@
-<h1> Search component {{name}}</h1>
+<div class="container">
 
-First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' />
+    First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' /> Last Name
+    : <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' />
 
-Last Name : <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' />
+</div>
