--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Hello!  {{name}}</h1>
+<h1>Application Features</h1>
 <nav>
     <a routerLink="/add"  routerLinkActive="active">Add</a>
     <a routerLink="/list" routerLinkActive="active">List </a>
