--- a/src/app/listComponent/listComponent.html
+++ b/src/app/listComponent/listComponent.html
@@ -1,5 +1,5 @@
-<h1> List Person </h1>
-<div>
+
+<div class="container col-sm-12">
     <ul *ngFor="let item of data">
         <li> First</li>
         <li> {{ item?.firstName }}</li>
