--- a/src/app/searchComponent/searchComponent.html
+++ b/src/app/searchComponent/searchComponent.html
@@ -1,6 +1,8 @@
 <div class="container">
+    <div class="form-group">
 
-    First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' /> Last Name
-    : <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' />
+        First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' /> Last
+        Name : <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' />
+    </div>
 
 </div>
