--- a/src/app/addPersonComponent/AddPersonComponent.html
+++ b/src/app/addPersonComponent/AddPersonComponent.html
@@ -57,7 +57,7 @@
         </div>
 
            <div class="form-group">
-                <input class="btn btn-primary" type="submit" value="Submit">
+                <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Submit">
             </div>
     </div>
 
