styling link button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>Application Features</h1>
 <nav>
-    <a routerLink="/add"  routerLinkActive="active">Add</a>
-    <a routerLink="/list" routerLinkActive="active">List </a>
-    <a routerLink="/search" routerLinkActive="active">Search </a>
+    <a class="btn btn-primary" routerLink="/add"  routerLinkActive="active">Add</a>
+    <a class="btn btn-primary" routerLink="/list" routerLinkActive="active">List </a>
+    <a class="btn btn-primary" routerLink="/search" routerLinkActive="active">Search </a>
     <my-spinner></my-spinner>
 </nav>
     <router-outlet></router-outlet>
