--- a/src/app/addPersonComponent/AddPersonComponent.html
+++ b/src/app/addPersonComponent/AddPersonComponent.html
@@ -1,5 +1,4 @@
 <form #personForm='ngForm' (ngSubmit)="onSubmit()">
-
     <div class="container">
 
         <div class="form-group">
@@ -9,13 +8,13 @@
 
                 <div *ngIf="name.errors && (name.dirty || name.touched)" class="alert alert-danger">
                     <div [hidden]="!name.errors.required">
-                        Name is required
+                        First Name is required
                     </div>
                     <div [hidden]="!name.errors.minlength">
-                        Name must be at least 4 characters long.
+                        First Name must be at least 4 characters long.
                     </div>
                     <div [hidden]="!name.errors.maxlength">
-                        Name cannot be more than 24 characters long.
+                        First Name cannot be more than 24 characters long.
                     </div>
                 </div>
         </div>
@@ -27,38 +26,34 @@
 
                 <div *ngIf="lname.errors && (lname.dirty || lname.touched)" class="alert alert-danger">
                     <div [hidden]="!lname.errors.required">
-                        Name is required
+                        Last Name is required
                     </div>
                     <div [hidden]="!lname.errors.minlength">
-                        Name must be at least 4 characters long.
+                        Last Name must be at least 4 characters long.
                     </div>
                     <div [hidden]="!lname.errors.maxlength">
-                        Name cannot be more than 24 characters long.
+                        Last Name cannot be more than 24 characters long.
                     </div>
                 </div>
         </div>
 
         <div class="form-group">
             <label for="name">Age</label>
-            <input type="text" id="name" class="form-control" required minlength="4" maxlength="24" name="age" [(ngModel)]="person.age"
-                #age="ngModel">
+            <input type="text" id="name" class="form-control" required maxlength="2" name="age" [(ngModel)]="person.age" #age="ngModel">
 
-                <div *ngIf="age.errors && (age.dirty || age.touched)" class="alert alert-danger">
-                    <div [hidden]="!age.errors.required">
-                        Name is required
-                    </div>
-                    <div [hidden]="!age.errors.minlength">
-                        Name must be at least 4 characters long.
-                    </div>
-                    <div [hidden]="!age.errors.maxlength">
-                        Name cannot be more than 24 characters long.
-                    </div>
+            <div *ngIf="age.errors && (age.dirty || age.touched)" class="alert alert-danger">
+                <div [hidden]="!age.errors.required">
+                    Age is required
                 </div>
+                <div [hidden]="!age.errors.maxlength">
+                    Name cannot be more than 24 characters long.
+                </div>
+            </div>
         </div>
 
-           <div class="form-group">
-                <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Submit">
-            </div>
+        <div class="form-group">
+            <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Submit">
+        </div>
     </div>
 
 </form>
