--- a/src/app/listComponent/listComponent.html
+++ b/src/app/listComponent/listComponent.html
@@ -1,7 +1,16 @@
-
 <div class="container col-sm-12">
-    <ul *ngFor="let item of data">
-        <li> First</li>
-        <li> {{ item?.firstName }}</li>
+
+    <ul class="list-group list-inline">
+        <li> First Name </li>
+        <li> Last Name </li>
+        <li> Age </li>
+        <li> Age Group </li>
+    </ul>
+
+    <ul *ngFor="let item of data" class="list-inline">
+        <li> {{ item?.firstName }} </li>
+        <li> {{ item?.lastName }} </li>
+        <li> {{ item?.age }} </li>
+        <li> {{ item?.ageGroup }} </li>
     </ul>
 </div>
