--- a/src/app/listComponent/listComponent.html
+++ b/src/app/listComponent/listComponent.html
@@ -1,15 +1,18 @@
 <div class="container col-sm-12">
-    <ul class="list-group list-inline">
-        <li> First Name </li>
-        <li> Last Name </li>
-        <li> Age </li>
-        <li> Age Group </li>
-    </ul>
+    <h2>Person List</h2>
+    <div class="rTable col-sm-12">
+        <div class="rTableRow col-sm-12">
+            <div class="rTableHead col-sm-3" ><strong>First Name </strong></div>
+            <div class="rTableHead col-sm-3"><strong>Last Name </strong></div>
+            <div class="rTableHead col-sm-3"><strong>Age </strong></div>
+            <div class="rTableHead col-sm-3"><strong>Age Group </strong></div>
+        </div>
 
-    <ul *ngFor="let item of data" class="list-inline">
-        <li> {{ item?.firstName }} </li>
-        <li> {{ item?.lastName }} </li>
-        <li> {{ item?.age }} </li>
-        <li> {{ item?.ageGroup }} </li>
-    </ul>
+        <div *ngFor="let item of data" class="list-inline">
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+        </div>
+    </div>
 </div>
