--- a/src/app/searchComponent/searchComponent.html
+++ b/src/app/searchComponent/searchComponent.html
@@ -1,7 +1,29 @@
+<h2>
+    Person List</h2>
+
+
 <div class="container">
     <div class="form-group">
         First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' /> Last
         Name : <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' />
     </div>
+</div>
 
+<div class="container col-sm-12">
+
+    <div class="rTable col-sm-12">
+        <div class="rTableRow col-sm-12">
+            <div class="rTableHead col-sm-3"><strong>First Name </strong></div>
+            <div class="rTableHead col-sm-3"><strong>Last Name </strong></div>
+            <div class="rTableHead col-sm-3"><strong>Age </strong></div>
+            <div class="rTableHead col-sm-3"><strong>Age Group </strong></div>
+        </div>
+
+        <div *ngFor="let item of data" class="list-inline">
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+            <div class="rTableCell col-sm-3">{{item?.firstName}}}</div>
+        </div>
+    </div>
 </div>
