added logic to control submit button.

--- a/src/app/searchComponent/searchComponent.html
+++ b/src/app/searchComponent/searchComponent.html
@@ -1,7 +1,4 @@
-<h2>
-    Person List</h2>
-
-
+<h2>Person List</h2>
 <div class="container">
     <div class="form-group">
         First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' /> Last
@@ -10,7 +7,6 @@
 </div>
 
 <div class="container col-sm-12">
-
     <div class="rTable col-sm-12">
         <div class="rTableRow col-sm-12">
             <div class="rTableHead col-sm-3"><strong>First Name </strong></div>
