--- a/src/app/addPersonComponent/AddPersonComponent.html
+++ b/src/app/addPersonComponent/AddPersonComponent.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="form-group">
-            <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Submit">
+            <input [disabled]="!name.valid" class="btn btn-primary" id="submit" name="submit" type="submit" value="Submit">
         </div>
     </div>
 
