refactor css. enhance ui for search component.

--- a/src/app/searchComponent/searchComponent.html
+++ b/src/app/searchComponent/searchComponent.html
@@ -1,8 +1,15 @@
 <h2>Person List</h2>
 <div class="container">
+
     <div class="form-group">
-        First Name : <input type='text' value='firstname' name='firstname' id='firstname' [formControl]='firstname' /> Last
-        Name : <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' />
+        <div class="col-sm-6">
+            First Name <input type='text' class="form-control" value='firstname' name='firstname' id='firstname' [formControl]='firstname'
+            /> 
+        </div>
+        <div class="col-sm-6">
+            Last Name <input type='text' value='lastname' namme='firstname' id='lastname' [formControl]='lastname' class="form-control"
+            />
+        </div>
     </div>
 </div>
 
